statum-macros/tests/ui/invalid_state_struct_variant.rs
extern crate statum;
use statum::state;
#[state]
enum BadState {
    Draft { version: u32 },
}
